# gpu_stereo_image_proc

./: .gitmodules  .pre-commit-config.yaml  CHANGELOG.rst  CMakeLists.txt  LICENSE  README.md  nodelet_plugins.xml  package.xml  sider.yml
.circleci/: config.yml
.github/ISSUE_TEMPLATE/: bug_report.md
cfg/: Disparity.cfg  LIBSGM.cfg  VXSGBM.cfg
gpu_stereo_image_proc_common/: CMakeLists.txt  package.xml
gpu_stereo_image_proc_common/cfg/: DisparityBilateralFilter.cfg  DisparityWLSFilter.cfg
gpu_stereo_image_proc_common/include/gpu_stereo_image_proc/: camera_info_conversions.h  msg_conversions.h  nodelet_base.h  sgbm_processor.h
gpu_stereo_image_proc_common/scripts/: image_oneshot.py
gpu_stereo_image_proc_common/src/: camera_info_conversions.cpp  msg_conversions.cpp  nodelet_base.cpp  sgbm_processor.cpp
gpu_stereo_image_proc_libsgm/: .gitignore  CMakeLists.txt  nodelet_plugins.xml  package.xml
gpu_stereo_image_proc_libsgm/cfg/: LIBSGM.cfg
gpu_stereo_image_proc_libsgm/include/gpu_stereo_image_proc/libsgm/: libsgm_sgbm_processor.h
gpu_stereo_image_proc_libsgm/launch/: libsgm_stereo_image_proc.launch
gpu_stereo_image_proc_libsgm/src/libgpu_stereo_image_proc_libsgm/: libsgm_sgbm_processor.cpp
gpu_stereo_image_proc_libsgm/src/nodelet/: libsgm_disparity.cpp
gpu_stereo_image_proc_opencv/: CMakeLists.txt  nodelet_plugins.xml  package.xml
gpu_stereo_image_proc_opencv/cfg/: OpenCVSGBM.cfg
gpu_stereo_image_proc_opencv/src/nodelet/: opencv_disparity.cpp
gpu_stereo_image_proc_visionworks/: CMakeLists.txt  nodelet_plugins.xml  package.xml
gpu_stereo_image_proc_visionworks/cfg/: VXSGBM.cfg
gpu_stereo_image_proc_visionworks/include/gpu_stereo_image_proc/visionworks/: vx_bidirectional_stereo_matcher.h  vx_conversions.h  vx_image_scaler.h  vx_stereo_matcher.h  vx_stereo_matcher_base.h  vx_stereo_matcher_params.h
gpu_stereo_image_proc_visionworks/launch/: vx_stereo_image_proc.launch
gpu_stereo_image_proc_visionworks/src/: vx_bidirectional_stereo_matcher.cpp  vx_conversions.cpp  vx_image_scaler.cpp  vx_nodelet.cpp  vx_stereo_matcher.cpp  vx_stereo_matcher_base.cpp
gpu_stereo_image_proc_visionworks/src/node/: vx_stereo_image_proc.cpp
gpu_stereo_image_proc_visionworks/src/nodelet/: vx_disparity.cpp
gpu_stereo_image_proc_vpi/: CMakeLists.txt  nodelet_plugins.xml  package.xml
gpu_stereo_image_proc_vpi/cfg/: VPI_SGBM.cfg
gpu_stereo_image_proc_vpi/include/gpu_stereo_image_proc/vpi/: vpi_status.h  vpi_stereo_matcher.h  vpi_stereo_matcher_base.h  vpi_stereo_matcher_params.h
gpu_stereo_image_proc_vpi/src/: vpi_nodelet.cpp  vpi_stereo_matcher.cpp  vpi_stereo_matcher_base.cpp
gpu_stereo_image_proc_vpi/src/node/: vpi_stereo_image_proc.cpp
include/gpu_stereo_image_proc/: camera_info_conversions.h  libsgm_sgbm_processor.h  msg_conversions.h  sgbm_processor.h  vx_bidirectional_stereo_matcher.h  vx_sgbm_processor.h  vx_stereo_matcher.h  vx_stereo_matcher.hpp
include/gpu_stereo_image_proc/visionworks/: vx_bidirectional_stereo_matcher.h  vx_conversions.h  vx_stereo_matcher.h  vx_stereo_matcher_base.h
launch/: comparison.launch  libsgb_stereo_image_proc.launch  libsgm_stereo_image_proc.launch  stereo_image_proc.launch  vx_stereo_image_proc.launch
src/libgpu_stereo_image_proc/: libsgm_sgbm_processor.cpp  msg_conversions.cpp  sgbm_processor.cpp  vx_bidirectional_stereo_matcher.cpp  vx_conversions.cpp  vx_sgbm_processor.cpp  vx_stereo_matcher.cpp
src/nodelets/: disparity.cpp  libsgm_disparity.cpp  vx_disparity.cpp
src/nodes/: stereo_image_proc.cpp  vx_stereo_image_proc.cpp
